Trying to fix alignment for new user form labels.

--- a/app/stylesheets/landing.sass
+++ b/app/stylesheets/landing.sass
@@ -60,16 +60,15 @@ hr#colruler
 
     label
       height: 39px
-      vertical-align: middle
 
     label[for=user_email]
-      padding: 20px 0 0
+      vertical-align: -100%
     label[for=user_password]
-      padding: 20px 0 0
+      vertical-align: -100%
     label[for=user_password_confirmation]
-      padding: 20px 0 0
+      vertical-align: -100%
     label[for=user_name]
-      padding: 7px 0 0
+      padding: 6px 0px 0px
   .input
     +column(ceil(2* $signup-columns / 3), true)
 
